<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffffff"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50.0dip">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:background="#ff4475e2"
            android:gravity="center"
            android:text="@string/privacy_policy"
            android:textColor="#ffffffff"
            android:textSize="20.0sp" />

        <ImageView
            android:id="@+id/backPrivacy"
            android:layout_width="30.0dip"
            android:layout_height="30.0dip"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20.0dip"
            android:background="@mipmap/back_icon"
            android:visibility="visible" />

        <View
            android:id="@+id/views"
            android:layout_width="fill_parent"
            android:layout_height="500.0dip" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:background="#ff7ec8fc" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0">

        <WebView
            android:id="@+id/webView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />

        <RelativeLayout
            android:id="@+id/error_layout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:visibility="gone">

            <TextView
                android:id="@+id/error_msg"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/btn_reload"
                android:gravity="center"
                android:text="@string/load_url_error" />

            <TextView
                android:id="@+id/btn_reload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15.0dip"
                android:background="@drawable/selector_btn_circle"
                android:paddingStart="25.0dip"
                android:paddingTop="10.0dip"
                android:paddingEnd="25.0dip"
                android:paddingBottom="10.0dip"
                android:text="@string/reload" />
        </RelativeLayout>

        <ProgressBar
            android:id="@+id/loadProgressBar"
            android:layout_width="70.0dip"
            android:layout_height="70.0dip"
            android:layout_centerInParent="true"
            android:visibility="gone" />
    </RelativeLayout>
</LinearLayout>