<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@mipmap/gallery_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_bar"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:background="#ff4475e2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/Title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PHOTOS"
            android:textColor="#ffffffff"
            android:textSize="25.0dip"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="30.0dip"
            android:layout_height="30.0dip"
            android:layout_marginStart="8.0dip"
            android:background="@mipmap/back_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_del"
            android:layout_width="0.0dip"
            android:layout_height="0.0dip"
            android:background="#00000000"
            android:text="@string/Delete"
            android:textAllCaps="false"
            android:textColor="#ffffffff"
            android:textSize="15.0dip"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="h,2:1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.12" />

        <Button
            android:id="@+id/btn_selectall"
            android:layout_width="0.0dip"
            android:layout_height="0.0dip"
            android:background="#00000000"
            android:text="@string/SelectALL"
            android:textAllCaps="false"
            android:textColor="#ffffffff"
            android:textSize="15.0dip"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="h,2:1"
            app:layout_constraintStart_toEndOf="@id/btn_del"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.12" />

        <Button
            android:id="@+id/btn_edit"
            android:layout_width="0.0dip"
            android:layout_height="0.0dip"
            android:background="#00000000"
            android:text="@string/Edit"
            android:textAllCaps="false"
            android:textColor="#ffffffff"
            android:textSize="15.0dip"
            app:layout_constraintDimensionRatio="h,2:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.12" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <GridView
        android:id="@+id/gridView"
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_marginStart="8.0dip"
        android:layout_marginTop="8.0dip"
        android:layout_marginEnd="8.0dip"
        android:layout_marginBottom="8.0dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_bar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Delete_AlertView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#80000000"
        android:elevation="4.0dip"
        android:visibility="invisible">

        <com.joyhonest.sports_camera.RoundConstraintLayout
            android:layout_width="0.0dip"
            android:layout_height="0.0dip"
            android:background="@mipmap/ferret_white_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.55"
            app:layout_constraintWidth_percent="0.5">

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.0dip"
                android:background="@mipmap/ferret_line"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHeight_percent="0.26"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <Button
                android:id="@+id/btn_ok"
                android:layout_width="0.0dip"
                android:layout_height="0.0dip"
                android:background="#00000000"
                android:text="@string/OK"
                android:textColor="#ff0090ff"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHeight_percent="0.25"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintWidth_percent="0.49" />

            <Button
                android:id="@+id/btn_cancel1"
                android:layout_width="0.0dip"
                android:layout_height="0.0dip"
                android:background="#ffffffff"
                android:text="@string/Cancel"
                android:textColor="#ff0090ff"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHeight_percent="0.25"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintWidth_percent="39.0" />

            <TextView
                android:id="@+id/sLine2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/Do_you_sure_delete"
                android:textColor="#ff000000"
                android:textSize="16.0dip"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.4" />

            <TextView
                android:id="@+id/sLine3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="file_delete"
                android:textColor="#ff880000"
                android:textSize="16.0dip"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.6" />
        </com.joyhonest.sports_camera.RoundConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/progressBar"
        android:layout_width="0.0dip"
        android:layout_height="0.0dip"
        android:src="@drawable/progress_bar_anim"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.12" />
</androidx.constraintlayout.widget.ConstraintLayout>