<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@mipmap/home_background">

    <Button
        android:id="@+id/btn_Start"
        android:layout_width="0.0dip"
        android:layout_height="0.0dip"
        android:background="@mipmap/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btn_Help"
        android:layout_width="0.0dip"
        android:layout_height="0.0dip"
        android:layout_marginStart="16.0dip"
        android:layout_marginBottom="16.0dip"
        android:background="@mipmap/help"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintHeight_percent="0.175"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_Setting"
        android:layout_width="0.0dip"
        android:layout_height="0.0dip"
        android:layout_marginEnd="16.0dip"
        android:layout_marginBottom="16.0dip"
        android:background="@mipmap/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.175" />

    <TextView
        android:id="@+id/privacyPolicy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16.0dip"
        android:text="@string/privacy"
        android:textColor="@color/colorAccent"
        android:textSize="20.0sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/NoDevice_AlertView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#80000000"
        android:elevation="4.0dip"
        android:visibility="invisible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0.0dip"
            android:layout_height="0.0dip"
            android:background="@mipmap/ferret_white_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.55"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.66"
            app:layout_constraintWidth_percent="0.55">

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.0dip"
                android:background="@mipmap/ferret_line"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHeight_percent="0.25"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0.0dip"
                android:layout_height="0.0dip"
                android:background="#00000000"
                android:text="@string/Cancel"
                android:textColor="#ff0090ff"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHeight_percent="0.25"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintWidth_percent="0.49" />

            <Button
                android:id="@+id/btn_ok"
                android:layout_width="0.0dip"
                android:layout_height="0.0dip"
                android:background="#00000000"
                android:text="@string/OK"
                android:textColor="#ff0090ff"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHeight_percent="0.25"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintWidth_percent="0.49" />

            <TextView
                android:id="@+id/sLine1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/No_Device_1"
                android:textColor="#ff000000"
                android:textSize="20.0dip"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.1" />

            <TextView
                android:id="@+id/sLine2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/No_Device_2"
                android:textColor="#ff000000"
                android:textSize="16.0dip"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.45" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>